# jaraco.text

./: .hgtags  .travis.yml  CHANGES.rst  CHANGES.txt  NEWS.rst  README.rst  README.txt  conftest.py  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
docs/: conf.py  index.rst
jaraco/: text.py
jaraco/text/: __init__.py  layouts.py  show-newlines.py  strip-prefix.py  to-dvorak.py  to-qwerty.py
jaraco/util/: string.py
newsfragments/: +200eab4f.feature.rst  +5f1ab118.bugfix.rst  +727cc156.removal.rst  +cefc5be5.feature.rst  +strip-ansi.feature.rst  15.misc.rst  16.misc.rst  17.feature.1.rst  17.feature.2.rst  17.feature.3.rst  24.feature.rst  26.feature.rst  30.feature.rst
tests/: test_core.py
