[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = jaraco.text
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Module for text manipulation
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.text
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = true
python_requires = >=2.7
install_requires =
	jaraco.functools
	six
	importlib_resources; python_version < "3.7"
setup_requires = setuptools_scm >= 1.15.0

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 1.2.3
	pytest-flake8
	pytest-black-multipy
	pytest-cov

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
